Fix cover image spacing

--- a/css/style.scss
+++ b/css/style.scss
@@ -561,7 +561,7 @@ strong { font-weight: 700; }
 	}
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 550px) {
 	h1 {
 		font-size: 1.7rem;
 	}
@@ -575,7 +575,6 @@ strong { font-weight: 700; }
 	
 @media screen and (max-width: 375px) {
 	#top {
-		height: 400px;
 		.section { 
 			padding: 30px 0;
 		}
